@@ -3,6 +3,8 @@ Changes to proxytunnel version 1.5.x -- not yet released
 - Small change to make compiler on tandem/hp-nonstop happy
   by Roberto Veldhoven
 - Small change to work around broken proxies by Stephane Engel
+- Changed client_len from size_t to socklen_t (64bit required)
+- Makefile vars now no longer override environment versions
 
 Changes to proxytunnel version 1.5.2 -- Fri Dec 16 09:27:11 CET 2005
 
